--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.17.2",
+    "@mantine/hooks": "^7.17.2",
     "@tailwindcss/vite": "^4.0.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
